Adds access to text area

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,6 +36,7 @@
       <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
       <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+        <!--This is the floppy disk save icon for the buttons-->
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
     </div>
@@ -107,7 +108,9 @@
     </div>
   </div>
 
+  <!--This script allows of usage of jquery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!--This script allows of usage of dayjs which we will use to display the date in the header-->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
